--- a/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
+++ b/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
@@ -4,6 +4,10 @@
             <mat-icon>add</mat-icon>
             Create Post
         </button>
+        <button matButton="elevated" (click)="fetchPosts()">
+            <mat-icon>search</mat-icon>
+            Get All Posts
+        </button>
     </div>
 
     <div class="m-2 w-full max-w-2xl">
@@ -14,9 +18,12 @@
                     <mat-card-title>{{post.title}}</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <p>{{post.content}}</p>
+                    <p class="truncated-content" id="cart-content-{{post.id}}">{{post.content}}</p>
                 </mat-card-content>
                 <mat-card-actions class="flex flex-row justify-end">
+                    <button matButton (click)="toggleContent(post.id)">
+                        {{ isContentExpanded(post.id) ? 'Show Less' : 'Show More' }}
+                    </button>
                     <button matButton="elevated" (click)="editPost(post)">
                         <mat-icon>edit</mat-icon>
                         Edit
