adding a way to make delete button red themed

--- a/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
+++ b/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
@@ -38,7 +38,7 @@
                         <mat-icon>edit</mat-icon>
                         Edit
                     </button>
-                    <button matButton="tonal" (click)="deletePost(post.id)">
+                    <button matButton="tonal" class="delete-button" (click)="deletePost(post.id)">
                         <mat-icon>delete</mat-icon>
                         Delete
                     </button>
