--- a/mini-blog-ui/src/styles.scss
+++ b/mini-blog-ui/src/styles.scss
@@ -7,6 +7,7 @@
 
 @use '@angular/material' as mat;
 @use 'tailwindcss';
+@include mat.core();
 
 html {
   @include mat.theme((
@@ -19,6 +20,17 @@ html {
     typography: Roboto,
     density: 0
   ));
+
+  .delete-button {
+    @include mat.theme((
+      color: (
+        primary: mat.$red-palette,
+        theme-type: light,
+      ),
+      typography: Roboto,
+      density: 0
+    ));
+  }
 }
 
 body {
