--- a/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
+++ b/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center justify-center w-full">
-    <div class="m-2 flex flex-row flex-wrap gap-3 items-top justify-stretch">
+    <div class="m-2 flex flex-row flex-wrap gap-3 items-top justify-center">
         <form [formGroup]="searchTitleForm">
             <mat-form-field appearance="fill" class="w-70 flex flex-row">
                 <mat-label>Filter By Title</mat-label>
@@ -31,7 +31,7 @@
                 <mat-card-content>
                     <p class="truncated-content" id="cart-content-{{post.id}}">{{post.content}}</p>
                 </mat-card-content>
-                <mat-card-actions class="flex flex-row gap-1 flex-wrap md:justify-end justify-center">
+                <mat-card-actions class="flex flex-row gap-1 flex-wrap sm:justify-end justify-center">
                     <button matButton (click)="toggleContent(post.id)">
                         {{ isContentExpanded(post.id) ? 'Show Less' : 'Show More' }}
                     </button>
