--- a/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
+++ b/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
@@ -23,7 +23,7 @@
 
     <div class="m-2 w-full max-w-5xl justify-center flex flex-col items-center">
         @if (this.posts().length) {
-            @for (post of this.posts(); track $index) {
+            @for (post of this.paginatedPosts(); track $index) {
             <mat-card class="blog-post-card" id="post-{{post.id}}">
                 <mat-card-header>
                     <mat-card-title>{{post.title}}</mat-card-title>
@@ -46,6 +46,14 @@
                 </mat-card-actions>
             </mat-card>
             }
+            <mat-paginator
+                (page)="handlePageEvent($event)"
+                [length]="posts().length"
+                [pageSize]="pageSize"
+                [pageSizeOptions]="[5, 10, 25, 50, 75, 100]"
+                [pageIndex]="pageIndex"
+                aria-label="Select page">
+            </mat-paginator>
         } @else {
             <p class="flex justify-center">It seems a bit empty in here...</p>
         }
