--- a/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
+++ b/mini-blog-ui/src/app/components/blog-post-component/blog-post-component.html
@@ -50,7 +50,7 @@
                 (page)="handlePageEvent($event)"
                 [length]="posts().length"
                 [pageSize]="pageSize"
-                [pageSizeOptions]="[5, 10, 25, 50, 75, 100]"
+                [pageSizeOptions]="pageSizeOptions"
                 [pageIndex]="pageIndex"
                 aria-label="Select page">
             </mat-paginator>
