--- a/mini-blog-ui/src/app/app.html
+++ b/mini-blog-ui/src/app/app.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="flex flex-row justify-between" color="primary">
+<mat-toolbar class="flex flex-row justify-between items-center" color="primary">
   <h1>Blog</h1>
   <div>
     <span class="spacer"></span>
